--- a/environment.yml
+++ b/environment.yml
@@ -1,4 +1,4 @@
-name: disent
+name: disent3
 channels:
   - defaults
 dependencies:
@@ -24,7 +24,7 @@ dependencies:
     - absl-py==0.7.1
     - argh==0.26.2
     - argparse==1.4.0
-    - astor==0.8.0
+    - astor==0.7.1
     - atomicwrites==1.3.0
     - attrs==19.1.0
     - backports-tempfile==1.0
@@ -33,6 +33,7 @@ dependencies:
     - click==7.0
     - crowdai-api==0.1.21
     - cycler==0.10.0
+    - dill==0.3.0
     - disentanglement-lib==1.0
     - docker-pycreds==0.4.0
     - enum34==1.1.6
@@ -43,28 +44,29 @@ dependencies:
     - gitpython==2.1.11
     - gql==0.1.0
     - graphql-core==2.2
-    - grpcio==1.22.0
+    - grpcio==1.20.1
     - h5py==2.9.0
     - idna==2.8
     - imageio==2.5.0
     - importlib-metadata==0.18
-    - joblib==0.13.2
-    - keras-applications==1.0.8
-    - keras-preprocessing==1.1.0
+    - keras-applications==1.0.7
+    - keras-preprocessing==1.0.9
     - kiwisolver==1.1.0
-    - markdown==3.1.1
-    - matplotlib==3.1.1
-    - mock==3.0.5
+    - llvmlite==0.29.0
+    - markdown==3.1
+    - matplotlib==3.0.3
+    - mock==3.0.4
     - more-itertools==7.1.0
-    - numpy==1.16.4
+    - numba==0.41.0
+    - numpy==1.16.3
     - nvidia-ml-py3==7.352.0
     - packaging==19.0
     - pandas==0.24.2
     - pathtools==0.1.2
-    - pillow==6.1.0
+    - pillow==6.0.0
     - pluggy==0.12.0
     - promise==2.2.1
-    - protobuf==3.9.0
+    - protobuf==3.7.1
     - psutil==5.6.3
     - py==1.8.0
     - pyparsing==2.4.0
@@ -76,9 +78,9 @@ dependencies:
     - pyyaml==5.1.1
     - redis==3.2.1
     - requests==2.22.0
-    - rx==1.6.1
-    - scikit-learn==0.21.2
-    - scipy==1.3.0
+    - rx==3.0.0
+    - scikit-learn==0.20.3
+    - scipy==1.2.1
     - sentry-sdk==0.10.2
     - shortuuid==0.5.0
     - simplejson==3.16.0
@@ -98,7 +100,7 @@ dependencies:
     - wandb==0.8.5
     - watchdog==0.9.0
     - wcwidth==0.1.7
-    - werkzeug==0.15.4
+    - werkzeug==0.15.2
     - zipp==0.5.2
-prefix: /home/amirabdi/miniconda3/envs/disent
+prefix: /home/amirabdi/miniconda3/envs/disent3
 
