--- a/environment.yml
+++ b/environment.yml
@@ -103,6 +103,8 @@ dependencies:
     - tensorflow-hub==0.4.0
     - tensorflow-probability==0.6.0
     - termcolor==1.1.0
+    - tqdm==4.32.2
     - urllib3==1.25.3
     - werkzeug==0.15.2
 prefix: /home/amirabdi/miniconda3/envs/disent_worked
+
