--- a/.gitattributes
+++ b/.gitattributes
@@ -1,2 +1,3 @@
 saved_models/mpi3dtoy_ae_gaussian/saved2 filter=lfs diff=lfs merge=lfs -text
 saved_models/mpi3dtoy_dip/saved filter=lfs diff=lfs merge=lfs -text
+saved_models/mpi3dtoy_betatc/saved filter=lfs diff=lfs merge=lfs -text
