--- a/.gitattributes
+++ b/.gitattributes
@@ -2,3 +2,4 @@ saved_models/mpi3dtoy_ae_gaussian/saved2 filter=lfs diff=lfs merge=lfs -text
 saved_models/mpi3dtoy_dip/saved filter=lfs diff=lfs merge=lfs -text
 saved_models/mpi3dtoy_betatc/saved filter=lfs diff=lfs merge=lfs -text
 saved_models/mpi3dtoy_betatc/saved2 filter=lfs diff=lfs merge=lfs -text
+saved_models/mpi3dtoy_betatc/saved3 filter=lfs diff=lfs merge=lfs -text
