--- a/.gitattributes
+++ b/.gitattributes
@@ -3,4 +3,5 @@ saved_models/mpi3dtoy_dip/saved filter=lfs diff=lfs merge=lfs -text
 saved_models/mpi3dtoy_betatc/saved filter=lfs diff=lfs merge=lfs -text
 saved_models/mpi3dtoy_betatc/saved2 filter=lfs diff=lfs merge=lfs -text
 saved_models/mpi3dtoy_betatc/saved3 filter=lfs diff=lfs merge=lfs -text
+saved_models/mpi3dtoy_infovae/saved filter=lfs diff=lfs merge=lfs -text
 . text !filter !merge !diff
