--- a/environment.yml
+++ b/environment.yml
@@ -5,8 +5,6 @@ channels:
   - defaults
 dependencies:
   - _libgcc_mutex=0.1
-  - atomicwrites=1.3.0
-  - attrs=19.1.0
   - blas=1.0
   - ca-certificates=2019.5.15
   - cairo=1.14.12
@@ -24,7 +22,6 @@ dependencies:
   - gstreamer=1.14.0
   - harfbuzz=1.8.8
   - icu=58.2
-  - importlib_metadata=0.17
   - intel-openmp=2019.4
   - jpeg=9b
   - libedit=3.1.20181209
@@ -41,23 +38,16 @@ dependencies:
   - mkl=2019.4
   - mkl_fft=1.0.12
   - mkl_random=1.0.2
-  - more-itertools=7.0.0
   - ncurses=6.1
   - ninja=1.9.0
-  - numpy-base=1.16.4
   - olefile=0.46
-  - openssl=1.1.1c
-  - packaging=19.0
+  - openssl=1.1.1
   - pango=1.42.4
   - pcre=8.43
   - pillow=6.0.0
   - pip=19.1.1
   - pixman=0.38.0
-  - pluggy=0.12.0
-  - py=1.8.0
   - pycparser=2.19
-  - pyparsing=2.4.0
-  - pytest=5.0.1
   - python=3.6.8
   - pytorch=1.1.0
   - readline=7.0
@@ -66,35 +56,23 @@ dependencies:
   - sqlite=3.28.0
   - tk=8.6.8
   - torchvision=0.3.0
-  - wcwidth=0.1.7
   - wheel=0.33.4
   - wxpython=4.0.4
   - xz=5.2.4
-  - zipp=0.5.1
   - zlib=1.2.11
   - zstd=1.3.7
   - pip:
     - absl-py==0.7.1
-    - argh==0.26.2
-    - argparse==1.4.0
     - astor==0.7.1
-    - backports-tempfile==1.0
-    - backports-weakref==1.0.post1
     - chardet==3.0.4
-    - click==7.0
     - crowdai-api==0.1.21
     - cycler==0.10.0
     - dill==0.3.0
     - disentanglement-lib==1.0
-    - docker-pycreds==0.4.0
     - enum34==1.1.6
     - future==0.17.1
     - gast==0.2.2
     - gin-config==0.1.4
-    - gitdb2==2.0.5
-    - gitpython==2.1.11
-    - gql==0.1.0
-    - graphql-core==2.2.1
     - grpcio==1.20.1
     - h5py==2.9.0
     - idna==2.8
@@ -108,28 +86,17 @@ dependencies:
     - mock==3.0.4
     - numba==0.41.0
     - numpy==1.16.3
-    - nvidia-ml-py3==7.352.0
     - pandas==0.24.2
-    - pathtools==0.1.2
-    - promise==2.2.1
     - protobuf==3.7.1
-    - psutil==5.6.3
-    - pytest-dependency==0.4.0
+    - pyparsing==2.4.0
     - python-dateutil==2.8.0
     - python-gitlab==1.9.0
-    - pytorch-ignite==0.2.0
     - pytz==2019.1
-    - pyyaml==5.1.1
     - redis==3.2.1
     - requests==2.22.0
-    - rx==1.6.1
     - scikit-learn==0.20.3
     - scipy==1.2.1
-    - sentry-sdk==0.10.2
-    - shortuuid==0.5.0
     - simplejson==3.16.0
-    - smmap2==2.0.5
-    - subprocess32==3.5.4
     - tensorboard==1.13.1
     - tensorflow-estimator==1.13.0
     - tensorflow-gpu==1.13.1
@@ -138,9 +105,6 @@ dependencies:
     - termcolor==1.1.0
     - tqdm==4.32.2
     - urllib3==1.25.3
-    - wandb==0.8.5
-    - watchdog==0.9.0
     - werkzeug==0.15.2
-    - wrapt==1.11.2
 prefix: /home/amirabdi/miniconda3/envs/disentanglement_challenge
 
