--- a/requirements.txt
+++ b/requirements.txt
@@ -20,19 +20,19 @@ mock==3.0.4
 numpy==1.16.3
 pandas==0.24.2
 Pillow==8.1.0
-protobuf==3.7.1
+protobuf==3.12.0
 pyparsing==2.4.0
 python-dateutil==2.8.0
 pytz==2019.1
 scikit-learn==0.20.3
 scipy==1.2.1
 simplejson==3.16.0
-six==1.12.0
+six==1.13.0
 tensorboard==1.13.1
 tensorflow-estimator==1.13.0
-tensorflow-gpu==1.13.1
+tensorflow==1.13.1
 tensorflow-hub==0.4.0
-tensorflow-probability==0.6.0
+tensorflow-probability==0.7.0
 termcolor==1.1.0
 Werkzeug==0.16.0
 torch==1.1.0
