--- a/.gitignore
+++ b/.gitignore
@@ -11,6 +11,7 @@ scripts
 *.sh
 **/saved
 requirements.txt
+dsprites_GRAYVAE.sh
 ### default python ignores
 
 # Byte-compiled / optimized / DLL files
